apps/ufc-dashboard/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufc-dashboard
  namespace: ufc-dashboard
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app
          image: ghcr.io/wlodzimierrr/ufc-dashboard:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
